--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "cbor": "4.0.0",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "ip": "^1.1.5",
     "lodash": "^4.17.10",
     "nodemon": "^1.13.3",
     "redux": "3.7.2",
