--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "It's sample app with integration blockchain in context iot (internet of things)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm-run-all --parallel open:src",
+    "open:src": "nodemon src/index.js",
+    "lint": "node_modules/.bin/esw src",
+    "lint:watch": "npm run lint -- --watch"
   },
   "author": "Cássio Paixão <cassiopaixaoti@gmail.com>",
   "license": "MIT",
@@ -21,7 +24,17 @@
     "nodemon": "^1.13.3",
     "redux": "3.7.2",
     "request": "2.83.0",
-    "restify": "6.3.4",
-    "sawtooth-sdk": "1.0.1"
+    "restify": "^6.3.4",
+    "sawtooth-sdk": "1.0.1",
+    "npm-run-all": "1.8.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.4.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "eslint-watch": "^4.0.2",
+    "i": "^0.3.6"
   }
 }
