--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "nodemon": "^1.13.3",
     "redux": "3.7.2",
     "request": "2.83.0",
-    "restify": "6.3.4",
+    "restify": "^6.3.4",
     "sawtooth-sdk": "1.0.1"
   }
 }
